# chinese_chess

./: .gitignore  AfterInstall.rtf  BeforeInstall.rtf  GUI.py  LICENSE  MIT License.rtf  README.md  chinese_chess.sln  chinese_chess.spec  config.json  install.bat  main.py  main.spec  statistic.json  tkintertools.py
.github/workflows/: build.yml  cmake-build.yml
Setup/: Setup.vdproj
alpha_beta_search/: CMakeLists.txt  alpha_beta_search.cpp  alpha_beta_search.h  alpha_beta_search.vcxproj  alpha_beta_search.vcxproj.filters  test.cpp  zobrist_hasher.cpp  zobrist_hasher.h
chinese_chess/: AI.py  GUI.py  LAN.py  README.md  alpha_beta_search.py  chess.py  chinese_chess.py  chinese_chess.pyproj  chinese_chess_lib.cp313-win_amd64.pyd  client.py  config.json  configure.py  constants.py  game.py  help-en.md  help.md  l10n.py  main.py  min_max_search.py  mini_win.py  requirements.txt  rule.py  sound.py  statistic.json  tkintertools.py  tools.py
chinese_chess/.github/workflows/: format-check.yml
chinese_chess/l10n/: chinese_chess.pot
chinese_chess/l10n/en/LC_MESSAGES/: chinese_chess.mo  chinese_chess.po
